- Fix margin spacing for widgets in index.ejs - Fix responsive for header dropdown

--- a/src/assets/sass/_media.scss
+++ b/src/assets/sass/_media.scss
@@ -108,6 +108,11 @@
         .btn-toggle {
             margin-left: 20px;
         }
+
+        .navbar-menu .menu-item>.dropdown-menu {
+            width: 100vw;
+            left: -5px !important;
+        }
     }
 
     .sidebar {
