--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -182,7 +182,7 @@
 								> .message-row {
 									small {
 										float: right;
-										margin-left: 10px;
+										// margin-left: 10px;
 									}
 
 									.message-user {
